# opengl-game

./: CMakeLists.txt  main.cpp
assets/shaders/: defaultFragment.txt  defaultVertex.txt
source/Assets/: AssetsManager.cpp  AssetsManager.h
source/Renderer/: ShaderManager.cpp  ShaderManager.h  Texture2D.cpp  Texture2D.h
